--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="js/jquery.tools.min.js"></script>
     <script src="js/jquery.cycle.all.js"></script>
     <script src="js/common.js"></script>  
-    <link href='http://fonts.googleapis.com/css?family=Istok+Web:400,700,400italic&subset=cyrillic,latin,cyrillic-ext' rel='stylesheet' type='text/css'>
     <!--[if lt IE 9]> 
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
     <![endif]-->
@@ -230,11 +229,11 @@
                 </li>
                 <li>
                     <span><i></i>2012-10-18 00:07:01</span>
-                    <a href="#">Как выбрать биде?</a>
+                    <a href="#">Канализационные трубы и их выбор</a>
                 </li>
                 <li>
                     <span><i></i>2012-10-18 00:07:01</span>
-                    <a href="#">Как выбрать биде?</a>
+                    <a href="#">Как отличить настоящую ванну Roca от подделки?</a>
                 </li>
             </ul>
             <a href="#" class="link-all"><i></i>Все статьи</a>
